test/classes/initializers/generics/phase1/param-from-new.good
param-from-new.chpl:11: error: cannot initialize param field 't' with 'new' expression
